# notebook

./: .gitignore  .gitignote  pyproject.toml  requirements.txt
Image_input_practice/: README.md  test_image_tempfile.py  test_image_url.py
Linear_algebra/: Determinants.md  Eigenvalues and Eigenvectors.md  Linear Equations in Linear Algebra.ipynb  Linear Equations in Linear Algebra.md
OOP/: 1.md  1.py  2.py  3.ipynb  4.ipynb  5.ipynb  6.ipynb
Probability, Statistics/: Discrete Random Variables.md
RAG_practice/: baseline.ipynb
cs224n/a1/: exploring_word_vectors.ipynb
kuber_practice/: commands.sh
kuber_practice/02_command/: command.md
kuber_practice/03_pod/: README.md  echo-lp.yaml  echo-pod-redis.yaml  echo-pod.yaml  exam2.yaml
kuber_practice/04_ReplicaSet/: README.md
kuber_practice/05_deployment/: README.md
