[project]
name = "notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiostream==0.6.1",
    "bs4==0.0.1",
    "chromadb==0.4.10",
    "fastapi>=0.99.1",
    "html5lib==1.1",
    "httpx==0.25.0",
    "iteration-utilities==0.12.0",
    "konlpy==0.6.0",
    "mysql-connector-python==8.1.0",
    "numpy==1.26.4",
    "openai>=1.0.0",
    "pandas==2.2.2",
    "pillow==9.5.0",
    "pydantic==1.10.12",
    "pymilvus>=2.5.0",
    "python-dotenv>=1.0.1",
    "python-mecab-ko==1.3.5",
    "rank-bm25==0.2.2",
    "redis==5.0.3",
    "requests==2.31.0",
    "tabulate==0.9.0",
    "tenacity==8.2.3",
    "uvicorn[standard]>=0.41.0",
]
